--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
   "license": "NOLICENSE",
   "scripts": {
     "less": "./node_modules/.bin/lessc --clean-css less/main.less public/style.css",
+    "minify":"./node_modules/.bin/uglifyjs public/main.js -cm -o public/main.js",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules;yarn run less"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "make": "yarn run build;yarn run minify;yarn run less"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.5.2",
+    "babel-preset-es2015": "^6.24.1",
     "cross-env": "^5.0.1",
     "less": "^2.7.2",
     "less-plugin-clean-css": "^1.5.1",
+    "uglify-es": "^3.0.15",
     "vue-loader": "^12.2.1",
     "vue-template-compiler": "^2.3.4",
     "webpack": "^2.6.1",
