--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.2.1",
     "request": "^2.81.0",
     "vue": "^2.3.4",
+    "vue-recaptcha": "^0.4.0",
     "vue-router": "^2.5.3"
   }
 }
