이제라도 로그...

--- a/Caddyfile
+++ b/Caddyfile
@@ -10,6 +10,7 @@ planet.moe {
 	}
 }
 api.planet.moe {
+    log
     header / {
         Access-Control-Allow-Origin *
         Access-Control-Allow-Methods "GET, POST, PUT, DELETE, HEADER, OPTIONS"
