--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "minify": "./node_modules/.bin/uglifyjs public/main.js -cm -o public/main.js",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "update": "git pull;yarn run build;yarn run minify;yarn run less;node update-complete.js"
+    "update": "git pull;yarn run build;yarn run minify;yarn run less;node ../planet-backend/update-complete.js"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
